initial and final commit, did not know we were going PR this when we were done.

--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,1 +1,10 @@
 <h1><%= @machine.location %> Vending Machine</h1>
+
+<p>
+<% @machine.snacks.each do |snack| %>
+  <%= snack.name %><br>
+  <%= snack.price %><br>
+<% end %>
+</p>
+
+<h4>The average price of snacks is $<%= @average %></h4>
